--- a/README.Rmd
+++ b/README.Rmd
@@ -16,17 +16,19 @@ knitr::opts_chunk$set(
 # COCA
 
 <!-- badges: start -->
+[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)
+[![R Version](https://img.shields.io/badge/R->=4.2-blue)](https://cran.r-project.org/)
+[![JAGS Required](https://img.shields.io/badge/JAGS-Required-red)](http://mcmc-jags.sourceforge.net/)
 <!-- badges: end -->
 
 The goal of COCA is to ...
 
 ## Installation
 
-You can install the development version of COCA from [GitHub](https://github.com/) with:
+Install from GitHub:
 
 ``` r
-# install.packages("pak")
-pak::pak("xiaohanchi/COCA")
+remotes::install_github("XXX")
 ```
 
 ## Example
@@ -38,11 +40,4 @@ This is a basic example which shows you how to solve a common problem:
 ## basic example code
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
 
