--- a/README.Rmd
+++ b/README.Rmd
@@ -16,22 +16,20 @@ knitr::opts_chunk$set(
 # COCA
 
 <!-- badges: start -->
-[![License: MIT](https://img.shields.io/badge/License-MIT-yellow.svg)](https://opensource.org/licenses/MIT)
-[![R Version](https://img.shields.io/badge/R->=4.2-blue)](https://cran.r-project.org/)
-[![JAGS Required](https://img.shields.io/badge/JAGS-Required-red)](http://mcmc-jags.sourceforge.net/)
 <!-- badges: end -->
 
 The goal of COCA is to ...
+![COCA Overview](./figures/flowchart_v0.png?raw=True)
 
 ## Installation
+JAGS is required for implementing Bayesian MCMC sampling. Please download JAGS from https://sourceforge.net/projects/mcmc-jags/. 
 
-Install from GitHub:
-
+To install the COCA package from GitHub, run:
 ``` r
 remotes::install_github("XXX")
 ```
 
-## Example
+## Usage
 
 This is a basic example which shows you how to solve a common problem:
 
@@ -40,4 +38,6 @@ This is a basic example which shows you how to solve a common problem:
 ## basic example code
 ```
 
+## Authors and Reference
+Chi, X., Lin, R.<sup>\*</sup>, Yuan, Y.<sup>\*</sup> (2025+). COCA: A Randomized Bayesian Design Integrating Dose Optimization and Component Contribution Assessment for Combination Therapies. Under Minor Revision in _Biometrics_.
 
