--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,8 @@ knitr::opts_chunk$set(
 <!-- badges: end -->
 
 The goal of COCA is to ...
-![COCA Overview](./figures/flowchart_v0.png?raw=True)
+
+<img src="./figures/flowchart_v0.png" width="80%">
 
 ## Installation
 JAGS is required for implementing Bayesian MCMC sampling. Please download JAGS from https://sourceforge.net/projects/mcmc-jags/. 
