--- a/README.Rmd
+++ b/README.Rmd
@@ -13,14 +13,14 @@ knitr::opts_chunk$set(
 )
 ```
 
-# COCA
+# COCA: Combination Dose Optimization and Component Contribution Assessment
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of COCA is to ...
+This work introduces **COCA**, a two-stage randomized phase II design that seamlessly integrates combination dose optimization with component contribution assessment. In stage 1, the optimal combination dose is determined by maximizing the risk–benefit tradeoff across multiple candidate combination doses. In stage 2, a multi-arm randomized phase is initiated to evaluate the contribution of each component within the combination therapy. 
 
-<img src="./figures/flowchart_v0.png" width="80%">
+<img src="./man/figures/flowchart_v0.png" width="80%">
 
 ## Installation
 JAGS is required for implementing Bayesian MCMC sampling. Please download JAGS from https://sourceforge.net/projects/mcmc-jags/. 
@@ -32,9 +32,16 @@ remotes::install_github("XXX")
 
 ## Usage
 
-This is a basic example which shows you how to solve a common problem:
+Get the calibrated design cutoffs and stage 1 sample size:
 
-```{r example}
+```{r example1}
+# library(COCA)
+## basic example code
+```
+
+Run simulation to get the operating characteristics of the COCA design with the calibrated configurations:
+
+```{r example2}
 # library(COCA)
 ## basic example code
 ```
