--- a/README.Rmd
+++ b/README.Rmd
@@ -126,11 +126,11 @@ output
 
 ```{r, echo = FALSE}
 display.output <- tibble(
-  case = 2, n.stage2 = 38, Ce1 = 0.7710, c0 = 0.84, Power = 0.91, TypeI = 0.10
+  case = 2, n.stage2 = 38, Ce1 = 0.7710, c0 = 0.84, Power = 0.9138, TypeI = 0.100
 )
 display.output
 ```
-This code may take a while... (Note: In my own implementation, I used high-performance computing clusters and parallel computing to accelerate the process.) For illustration, consider using a smaller number of replicates (e.g., `n.simu = 100`). Once completed, we obtained the optimal stage 2 sample size of 38, along with design cutoffs $C_{e1}=0.7710$ and $c_0=84$, as reported in our paper. 
+This code may take a while to run... (Note: In my own implementation, I used high-performance computing clusters and parallel computing to accelerate the process.) For illustration, consider using a smaller number of replicates (e.g., `n.simu = 100`). Once completed, we obtained the optimal stage 2 sample size of 38, along with design cutoffs $C_{e1}=0.7710$ and $c_0=0.84$, as reported in our paper. 
 
 ##### 3. Run COCA Design
 
