--- a/README.Rmd
+++ b/README.Rmd
@@ -80,6 +80,11 @@ COCA.getOC(
 
 -   Again, `n.simu` is set to 100 for illustration. For more accurate simulation, consider using a larger value, such as 10000.
 
+### Competing Approaches
+
+
+
+
 ### Examples: Redesigning the NCT02519348 Trial
 
 This example provides a step-by-step tutorial on redesigning the NCT02519348 trial<sup>[2]</sup> using COCA. This trial involves four arms: T 300 mg $\times$ 1 dose plus D 1500 mg (T300+D), T 75 mg $\times$ 4 doses plus D 1500 mg (T75+D), D 1500 mg monotherapy, and T 750mg monotherapy.
@@ -135,13 +140,14 @@ display.output <- tibble(
 )
 display.output
 ```
-This code may take a while to run... (Note: In my own implementation, I used high-performance computing clusters and parallel computing to accelerate the process.) For illustration, consider using a smaller number of replicates (e.g., `n.simu = 100`). Once completed, we obtained the optimal stage 2 sample size of 38, along with design cutoffs $C_{e1}=0.7710$ and $c_0=0.84$, as reported in our paper. 
+
+This code may take a while to run... (Note: In my own implementation, I used high-performance computing clusters and parallel computing to accelerate the process.) For illustration, consider using a smaller number of replicates (e.g., `n.simu = 100`). Once completed, we obtained the optimal stage 2 sample size of 38, along with design cutoffs $C_{e1}=0.7710$ and $c_0=0.84$, as reported in our paper.
 
 ##### 3. Run COCA Design
 
-The `COCA.getOC` function is used to obtain the operating characteristics of stage 1 (selection and expected sample size) and stage 2 (power, GP, SR, OSR, and expected sample size) of COCA. 
-So far, we have obtained the optimal design parameters: `n.stage2 = 38`, `Ce = 0.7710`, and `c0 = 0.84`. To assess the design performance, we still need to specify the true efficacy and toxicity rates. Using the observed trial outcomes: the toxicity rates in the four arms (T vs. D vs. T300+D vs. T75+D) were 24.6\%, 10.9\%, 17.6\%, and 14.6\%, and efficacy rates were 7.2\%, 10.6\%, 24.0\%, and 9.5\%, respectively. Therefore:
-```r
+The `COCA.getOC` function is used to obtain the operating characteristics of stage 1 (selection and expected sample size) and stage 2 (power, GP, SR, OSR, and expected sample size) of COCA. So far, we have obtained the optimal design parameters: `n.stage2 = 38`, `Ce = 0.7710`, and `c0 = 0.84`. To assess the design performance, we still need to specify the true efficacy and toxicity rates. Using the observed trial outcomes: the toxicity rates in the four arms (T vs. D vs. T300+D vs. T75+D) were 24.6%, 10.9%, 17.6%, and 14.6%, and efficacy rates were 7.2%, 10.6%, 24.0%, and 9.5%, respectively. Therefore:
+
+``` r
 tox.SOC = 0.246
 tox.B = 0.109
 tox.AB = c(0.176, 0.146)
@@ -151,10 +157,13 @@ eff.B = 0.106
 eff.AB.s1 = c(0.240, 0.095) # assume no period effect
 eff.AB.s2 = c(0.240, 0.095)
 ```
-We assume the toxicity ordering between the two combination doses is T300+D $\geq$ T75+D, so 
-```r
+
+We assume the toxicity ordering between the two combination doses is T300+D $\geq$ T75+D, so
+
+``` r
 tox.isomat = matrix(c(2, 1), byrow = T, nrow = 1)
 ```
+
 We use a utility score of `utility.score = c(0, 40, 60, 100)` in stage 1 dose optimization. For additional configurations, please refer to Section 5 of [1].
 
 First, let's assume no period effect between stages 1 and 2 and obtain the design operating characteristics:
@@ -167,24 +176,25 @@ COCA.getOC(
   tox.SOC = tox.SOC, eff.SOC = eff.SOC, tox.B = tox.B, eff.B = eff.B, 
   tox.AB = tox.AB, eff.AB.s1 = eff.AB.s1, eff.AB.s2 = eff.AB.s2, 
   tox.isomat = matrix(c(2, 1), byrow = T, nrow = 1), 
-  tox.upper = 0.35, eff.lower = 0.07, Cs = 0.80, C.f1 = 0.90, C.f2 = 0.90, 
-  utility.score = c(0, 40, 60, 100), rho = 0.2, n.simu = 5000
+  tox.upper = 0.30, eff.lower = 0.07, Cs = 0.80, C.f1 = 0.90, C.f2 = 0.90, 
+  utility.score = c(0, 40, 60, 100), rho = 0.2, prior.sample = 1e5, n.simu = 5000
   )
 ```
 
 ```{r, echo = FALSE}
-stage1_output <- c(1.44, 83.54, 15.02, 83.54, 43.79)
+stage1_output <- c(1.56, 83.34, 15.10, 83.34, 43.78)
 names(stage1_output) <- c("termination (%)", paste0("dose", 1:2, " (%)"), "selection (%)", "EN")
-stage2_output <- c(78.10, 74.19, 69.48, 67.53, 104.6)
+stage2_output <- c(77.41, 73.81, 69.16, 67.43, 104.3)
 names(stage2_output) <- c("Power (%)", "GP (%)", "SR (%)", "OSR (%)", "EN")
 display.output <- list(
     stage1_output = stage1_output, stage2_output = stage2_output
   )
 display.output
 ```
-In stage 1, we have an 83.54\% chance of selecting the correct combination dose as the OBD, with an average sample size of 43.79 patients. In stage 2, the power of our design is 78.10\%, the GP is 74.19\%, the SR is 69.48\%, and the OSR is 67.53\%, with an average sample size of 104.60 patients. In total, the trial requires an average of 148.39 patients (43.79 in stage 1 and 104.60 in stage 2). For illustration, consider using a smaller number of replicates (e.g., `n.simu = 100`).
 
-If the ORRs of the combinations in stage 1 are 5\% higher than the stage 2 rates (i.e., period effect = 0.05), run:
+In stage 1, we have an 83.34% chance of selecting the correct combination dose as the OBD, with an average sample size of 43.78 patients. In stage 2, the power of our design is 77.41%, the GP is 73.81%, the SR is 69.16%, and the OSR is 67.43%, with an average sample size of 104.30 patients. In total, the trial requires an average of 148.08 patients (43.78 in stage 1 and 104.30 in stage 2). For illustration, here we set `prior.sample = 1e5` (i.e., $10^5$ prior draws per simulation) to balance computational speed and result accuracy. This code may take approximately 10–20 minutes to run, depending on your system specifications. To reproduce the results in [1], please use `prior.sample = 1e6`, though this will require additional computation time.
+
+If the ORRs of the combinations in stage 1 are 5% higher than the stage 2 rates (i.e., period effect = 0.05), run:
 
 ```{r, echo = TRUE, eval = FALSE}
 eff.AB.s1 <- c(0.240, 0.095) + 0.05
@@ -195,21 +205,26 @@ COCA.getOC(
   tox.SOC = tox.SOC, eff.SOC = eff.SOC, tox.B = tox.B, eff.B = eff.B, 
   tox.AB = tox.AB, eff.AB.s1 = eff.AB.s1, eff.AB.s2 = eff.AB.s2, 
   tox.isomat = matrix(c(2, 1), byrow = T, nrow = 1), 
-  tox.upper = 0.35, eff.lower = 0.07, Cs = 0.80, C.f1 = 0.90, C.f2 = 0.90, 
-  utility.score = c(0, 40, 60, 100), rho = 0.2, n.simu = 5000
+  tox.upper = 0.30, eff.lower = 0.07, Cs = 0.80, C.f1 = 0.90, C.f2 = 0.90, 
+  utility.score = c(0, 40, 60, 100), rho = 0.2, prior.sample = 1e5, n.simu = 5000
   )
 ```
 
 ```{r, echo = FALSE}
-stage1_output <- c(0.3, 81.6, 18.1, 81.6, 45.88)
+stage1_output <- c(0.36, 81.38, 18.26, 81.38, 45.87)
 names(stage1_output) <- c("termination (%)", paste0("dose", 1:2, " (%)"), "selection (%)", "EN")
-stage2_output <- c(78.44, 73.84, 71.78, 69.07, 105.5)
+stage2_output <- c(77.72, 73.12, 70.75, 68.04, 105.1)
 names(stage2_output) <- c("Power (%)", "GP (%)", "SR (%)", "OSR (%)", "EN")
 display.output <- list(
     stage1_output = stage1_output, stage2_output = stage2_output
   )
 display.output
 ```
+
+
+##### 4. Comparison with Dunnett’s test
+
+This package also provides the function `dunnett.comb` to implement the Dunnett’s test approach described in Web Appendix C of [1].
 
 
 ### Reference
