--- a/README.Rmd
+++ b/README.Rmd
@@ -82,11 +82,13 @@ COCA.getOC(
 
 ##### \* Competing Approaches
 
-We provide R scripts that implement the competing approaches mentioned in the paper<sup>[1]</sup>. To access them, use the following R code to open the file:
-```r
+We provide R code to implement the competing approaches mentioned in the paper<sup>[1]</sup>. To access it, use the following R code:
+
+``` r
 open_example("alt_designs.R")
 ```
 
+Detailed instructions for reproducing the results in paper [1] are provided at the end of the script, along with some example output `.Rdata` files in `inst/example_Rdata`.
 
 ### Examples: Redesigning the NCT02519348 Trial
 
@@ -224,11 +226,9 @@ display.output <- list(
 display.output
 ```
 
-
 ##### 4. Comparison with Dunnett’s test
 
 This package also provides the function `dunnett.comb` to implement the Dunnett’s test approach described in Web Appendix C of [1].
-
 
 ### Reference
 
