--- a/README.Rmd
+++ b/README.Rmd
@@ -48,7 +48,9 @@ library(COCA)
 
 To search for the optimal stage 2 sample size between 20 and 30 and obtain the corresponding design parameters under `case = 1` and the settings described in the 'Numerical Studies' section of paper [1], run:
 
+
 ```{r example1, eval = FALSE}
+# Estimated runtime: ~5 minutes on a MacBook Air (M1, 16 GB RAM)
 COCA.calibration(
   case = 1, n.stage1 = 24, n.stage2 = seq(20, 30, 2), 
   dosage.ctrl = c(A = 0, B = 0), dosage.singleA = 300, dosage.singleB = 300, 
@@ -60,12 +62,18 @@ COCA.calibration(
 )
 ```
 
-For more accurate calibration, consider increasing `prior.sample` to $10^6$ and setting `n.simu` to $10^4$, though this may require additional computation time. If the power or success rate does not reach the target, increase `n.stage2` and rerun the calibration. **To fully reproduce the results in our paper, please use the following inputs: `period.effect = seq(-0.1, 0.5, 0.05)`, `prior.sample = 1e6`, and `n.simu = 1e4`, while keeping all other inputs unchanged. For other trial cases, please use `case = 2` or `case = 3` as appropriate.**
+
+If the power or success rate does not reach the target, increase `n.stage2` and rerun the calibration. **To fully reproduce the results in our paper, please use the following inputs: `period.effect = seq(-0.1, 0.5, 0.05)`, `prior.sample = 1e6`, and `n.simu = 1e4`, while keeping all other inputs unchanged. For other trial cases, please use `case = 2` or `case = 3` as appropriate.**
+
+> **NOTE:**
+The above example is a simplified, lighter version of the calibration procedure designed to facilitate user testing, using fewer prior samples and simulations. The full calibration procedure is time-consuming, as it requires identifying a suitable sample size `n.stage2` while controlling the maximum type I error inflation across a range of potential period effects. To reproduce our results, one must perform finer prior sampling and use a large number of simulation replications (e.g., increase `prior.sample` to $10^6$ and setting `n.simu` to $10^4$). On a MacBook Air (Apple M1 chip, 16 GB RAM), running 10,000 replicated studies for a given sample size and true probability scenario (e.g., $H_0$ or $H_1$) takes approximately 20 to 30 minutes. Since our calibration involves exploring a range of candidate sample sizes across multiple true scenarios, the entire process typically takes 12 to 16 hours. In our paper, we used a high-performance computing cluster (Seadragon, the MD Anderson research cluster) for the calibration. With 200 parallel jobs, the complete process takes approximately 20 to 30 minutes on average.  
+
 
 Once the optimal `n.stage2` is found, run simulations to get the operating characteristics of the COCA design with the calibrated configurations:
 
 ```{r example2, eval = FALSE}
 # E.g., scenario 1 (period effect = 0)
+# Estimated runtime: ~13 minutes on a MacBook Air (M1, 16 GB RAM)
 COCA.getOC(
   case = 1, n.stage1 = 24, n.stage2 = 26, Ce = 0.9152, c0 = 0.66, nlook.stage1 = 2, 
   nlook.stage2 = 2, dosage.ctrl = c(A = 0, B = 0), dosage.singleA = 300, dosage.singleB = 300,
@@ -121,6 +129,7 @@ We also hope to control the maximum type I error under potential period effects 
 The `COCA.calibration` function will return the optimal stage 2 sample size along with the corresponding power and calibrated design cutoffs ($C_{e1}$ and $c_0$). If the target power or TSR is not achieved under the current settings, the function will issue a warning suggesting an increase in the stage 2 sample size. We would like to assume `n.stage1 = 24` and search for the optimal stage 2 sample size in the range of 32 to 40:
 
 ```{r, echo = TRUE, eval = FALSE}
+# Estimated runtime: ~13 hours on a MacBook Air (M1, 16 GB RAM)
 COCA.calibration(
     case = 2, n.stage1 = 24, n.stage2 = seq(32, 40, 2), 
     dosage.ctrl = dosage.ctrl, dosage.singleA = 0, 
@@ -139,7 +148,7 @@ display.output <- tibble(
 display.output
 ```
 
-This code may take a while to run... (Note: In my own implementation, I used high-performance computing clusters and parallel computing to accelerate the process.) For illustration, consider using a smaller number of prior draws (e.g., `prior.sample = 1e5`) and simulation replicates (e.g., `n.simu = 1000`) to reduce runtime. Once completed, we obtained the optimal stage 2 sample size of 38, along with design cutoffs $C_{e1}=0.7710$ and $c_0=0.81$, as reported in our paper.
+This code may take a while to run... For illustration, consider using a smaller number of prior draws (e.g., `prior.sample = 1e5`) and simulation replicates (e.g., `n.simu = 1000`) to reduce runtime. Once completed, we obtained the optimal stage 2 sample size of 38, along with design cutoffs $C_{e1}=0.7710$ and $c_0=0.81$, as reported in our paper.
 
 ##### 3. Run COCA Design
 
@@ -167,6 +176,7 @@ We use a utility score of `utility.score = c(0, 40, 60, 100)` in stage 1 dose op
 First, let's assume no period effect between stages 1 and 2 and obtain the design operating characteristics:
 
 ```{r, echo = TRUE, eval = FALSE}
+# Estimated runtime: ~9 minutes on a MacBook Air (M1, 16 GB RAM)
 COCA.getOC(
   case = 2, n.stage1 = 24, n.stage2 = 38, Ce = 0.7710, c0 = 0.81, nlook.stage1 = 2, 
   nlook.stage2 = 2, dosage.ctrl = dosage.ctrl, dosage.singleA = 0, 
@@ -195,6 +205,7 @@ In stage 1, we have an 83.34% chance of selecting the correct combination dose a
 If the ORRs of the combinations in stage 1 are 5% higher than the stage 2 rates (i.e., period effect = 0.05), run:
 
 ```{r, echo = TRUE, eval = FALSE}
+# Estimated runtime: ~9 minutes on a MacBook Air (M1, 16 GB RAM)
 eff.AB.s1 <- c(0.240, 0.095) + 0.05
 COCA.getOC(
   case = 2, n.stage1 = 24, n.stage2 = 38, Ce = 0.7710, c0 = 0.81, nlook.stage1 = 2, 
@@ -231,5 +242,5 @@ Detailed instructions for reproducing the results in paper [1] are provided at t
 
 ### Reference
 
-[1]. Chi, X., Lin, R.<sup>\*</sup>, Yuan, Y.<sup>\*</sup> (2025+). COCA: A Randomized Bayesian Design Integrating Dose Optimization and Component Contribution Assessment for Combination Therapies. Under Minor Revision in *Biometrics*.\
+[1]. Chi, X., Lin, R.<sup>\*</sup>, Yuan, Y.<sup>\*</sup> (2025+). COCA: A Randomized Bayesian Design Integrating Dose Optimization and Component Contribution Assessment for Combination Therapies. \
 [2]. Kelley, R. K., Sangro, B., Harris, W., et al. Safety, Efficacy, and Pharmacodynamics of Tremelimumab Plus Durvalumab for Patients With Unresectable Hepatocellular Carcinoma: Randomized Expansion of a Phase I/II Study. *Journal of Clinical Oncology*. 2021;39(27):2991-3001. <doi:10.1200/JCO.20.03555>
