--- a/README.Rmd
+++ b/README.Rmd
@@ -66,7 +66,7 @@ COCA.calibration(
 If the power or success rate does not reach the target, increase `n.stage2` and rerun the calibration. **To fully reproduce the results in our paper, please use the following inputs: `period.effect = seq(-0.1, 0.5, 0.05)`, `prior.sample = 1e6`, and `n.simu = 1e4`, while keeping all other inputs unchanged. For other trial cases, please use `case = 2` or `case = 3` as appropriate.**
 
 > **NOTE:**
-The above example is a simplified, lighter version of the calibration procedure designed to facilitate user testing, using fewer prior samples and simulations. The full calibration procedure is time-consuming, as it requires identifying a suitable sample size `n.stage2` while controlling the maximum type I error inflation across a range of potential period effects. To reproduce our results, one must perform finer prior sampling and use a large number of simulation replications (e.g., increase `prior.sample` to $10^6$ and setting `n.simu` to $10^4$). On a MacBook Air (Apple M1 chip, 16 GB RAM), running 10,000 replicated studies for a given sample size and true probability scenario (e.g., $H_0$ or $H_1$) takes approximately 20 to 30 minutes. Since our calibration involves exploring a range of candidate sample sizes across multiple true scenarios, the entire process typically takes 12 to 16 hours. In our paper, we used a high-performance computing cluster (Seadragon, the MD Anderson research cluster) for the calibration. With 200 parallel jobs, the complete process takes approximately 20 to 30 minutes on average.  
+The above example is a simplified version with fewer prior samples and simulations to facilitate user testing. The full calibration procedure is time-consuming, as it requires identifying a suitable sample size `n.stage2` while controlling the maximum type I error inflation across a range of potential period effects. To reproduce our results, finer prior sampling and a larger number of simulation replications are required (e.g., increase `prior.sample` to $10^6$ and setting `n.simu` to $10^4$). On a MacBook Air (Apple M1 chip, 16 GB RAM), running 10,000 replicated studies for a given sample size and true probability scenario (e.g., $H_0$ or $H_1$) takes approximately 20 to 30 minutes. Since our calibration involves exploring a range of candidate sample sizes across multiple true scenarios, the entire process typically takes 12 to 16 hours. In our paper, we used a high-performance computing cluster (Seadragon, the MD Anderson research cluster) for the calibration. With 200 parallel jobs, the complete process takes approximately 20 to 30 minutes on average.  
 
 
 Once the optimal `n.stage2` is found, run simulations to get the operating characteristics of the COCA design with the calibrated configurations:
